# tower_research

./: .gitignore  7因子计算说明.docx  README.md  实验对比分析报告.docx  汇报稿子.docx
QuantaAlpha/: README.md  README_CN.md  pyproject.toml  requirements.txt  run.py  run.sh
QuantaAlpha/configs/: .env.example  experiment.yaml  experiment_venv_smoke.yaml
QuantaAlpha/quantaalpha/: cli.py
QuantaAlpha/quantaalpha/backtest/: __init__.py  local_factor_runner.py  research_bt.py  summary_metrics.py
QuantaAlpha/quantaalpha/coder/costeer/: evolving_agent.py  evolving_strategy.py  knowledge_management.py
QuantaAlpha/quantaalpha/data/: __init__.py  private_catalog.py
QuantaAlpha/quantaalpha/factors/: experiment.py  factor_materialize.py  feedback.py  library.py  private_runner.py  private_scenario.py  proposal.py  runner.py
QuantaAlpha/quantaalpha/factors/coder/: __init__.py  config.py  eva_utils.py  evaluators.py  evolving_strategy.py  expr_parser.py  factor.py  factor_eval.py  function_lib.py  qa_prompts.yaml  template.jinjia2  template_panel_loader.py
QuantaAlpha/quantaalpha/factors/prompts/: private_scenario.yaml  prompts.yaml
QuantaAlpha/quantaalpha/llm/: client.py  config.py  stub_chat.py
QuantaAlpha/quantaalpha/log/: __init__.py
QuantaAlpha/quantaalpha/pipeline/: factor_mining.py  loop.py  planning.py  settings.py
QuantaAlpha/quantaalpha/utils/: workflow.py
QuantaAlpha/scripts/: backtest_low_entropy_low_vol.py  test_h2e.py
backtest/: README.md  pyproject.toml  requirements.txt
backtest/scripts/: run_example.sh
backtest/single_factor_bt/: __init__.py  cli.py  engine.py  io_utils.py  metrics.py  plot.py  safety.py  universe.py
backtest/tests/: test_engine_small.py
base_data_process/: __init__.py  (+6 more)
(+64 files in other folders)
