[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "wheel",
]

[project]
authors = [
  {email = "tangzy27@mail2.sysu.edu.cn", name = "Ziyi Tang"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "QuantaAlpha - LLM-Driven Alpha Factor Mining Agent"
version = "0.1.0"
dynamic = [
  "dependencies",
  "optional-dependencies",
]
keywords = [
  "Quantitative Finance",
  "Factor Mining",
  "Large Language Models",
  "Autonomous Agents",
]
name = "quantaalpha"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
quantaalpha = "quantaalpha.cli:app"

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
docs = {file = ["requirements/docs.txt"]}
