[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "single_factor_bt"
version = "0.1.0"
description = "Single-factor cross-section backtest with vectorized multi-process engine."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "polars>=0.20",
]

[project.scripts]
single-factor-bt = "single_factor_bt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["single_factor_bt*"]
